--- a/graphite/storage-schemas.conf
+++ b/graphite/storage-schemas.conf
@@ -1,3 +1,7 @@
-[default]
+[stats]
+pattern = ^stats.*
+retentions = 10s:1h,60s:7d
+
+[default_1_day]
 pattern = .*
-retentions = 10s:7d
+retentions = 60s:1d
